--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Aivon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mariadb-java-client-2.3.0.jar=E:\\Desktop\\Tecnicatura Desarrollo Software\\Materias\\A\u00f1o1.C2 - Laboratorio de Programacion I\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
